--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
           <h2>Contact Us</h2>
           <p>We’d love to hear from you! Get in touch for personalized financial solutions.</p>
           <div class="contact-info">
-            <p><strong>Email:</strong> <a href="mailto:info@abccafirm.com">info@abccafirm.com</a></p>
+            <p><strong>Email:</strong> <a href="mailto:info@cafirm.com">info@abccafirm.com</a></p>
             <p><strong>Phone:</strong> <a href="tel:+919876543210">+91-98765-43210</a></p>
             <p><strong>Address:</strong> 123 Business Park, Corporate City, India</p>
           </div>
