--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,65 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sanjay Kuthe and Co - Your Financial Partner</title>
   <link rel="stylesheet" href="css/styles.css">
+  <style>
+    .nav-links {
+      display: flex;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    .nav-links li {
+      margin-right: 20px;
+    }
+
+    .nav-links a {
+      text-decoration: none;
+      color: white;
+      padding: 10px 15px;
+      background-color: green;
+      border-radius: 5px;
+    }
+
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: green;
+      color: white;
+      padding: 10px;
+      border-radius: 5px;
+      box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+      z-index: 1;
+    }
+
+    .dropdown-content a {
+      display: block;
+      text-decoration: none;
+      color: white;
+      padding: 8px;
+    }
+
+    .dropdown-content a:hover {
+      background-color: #004d00;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    .dropdown .dropbtn {
+      background-color: green;
+      color: white;
+      padding: 10px 15px;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+  </style>
 </head>
 <body>
   <!-- Sticky Header -->
@@ -13,9 +72,15 @@
       <h1 class="company-name">Sanjay Kuthe and Co</h1>
       <nav>
         <ul class="nav-links">
-          <a href="#about">About Us</a>
-          <a href="#services">Services</a>
-          <a href="#contact">Contact Us</a>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact Us</a></li> 
+          <li class="dropdown">
+            <a href="#tools" class="dropbtn">Tools</a>
+            <div class="dropdown-content">
+              <a href="http://192.168.0.108:3000/converter.html">Bank Statement Utility</a>
+            </div>
+          </li>
         </ul>
       </nav>
     </div>
@@ -81,9 +146,9 @@
           <h2>Contact Us</h2>
           <p>We’d love to hear from you! Get in touch for personalized financial solutions.</p>
           <div class="contact-info">
-            <p><strong>Email:</strong> <a href="mailto:info@cafirm.com">info@abccafirm.com</a></p>
+            <p><strong>Email:</strong> <a href="mailto:info@cafirm.com">info@mymail.com</a></p>
             <p><strong>Phone:</strong> <a href="tel:+919876543210">+91-98765-43210</a></p>
-            <p><strong>Address:</strong> 123 Business Park, Corporate City, India</p>
+            <p><strong>Address:</strong> Nagpur, India</p>
           </div>
         </div>
       </div>
@@ -109,5 +174,25 @@
       });
     });
   </script>
+  <script>
+    // Smooth scrolling for navigation links
+    document.querySelectorAll('.nav-links a').forEach(link => {
+  link.addEventListener('click', function (e) {
+    const href = this.getAttribute('href');
+    if (href.startsWith('#')) {
+      e.preventDefault();
+      const target = document.querySelector(href);
+      if (target) {
+        target.scrollIntoView({ behavior: 'smooth' });
+      }
+    } else if (!href.startsWith('http')) {
+      // For local links, ensure it works correctly
+      window.location.href = href;
+    }
+  });
+});
+
+  </script>
+  
 </body>
 </html>
