--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
             <p>Comprehensive audits to ensure financial accuracy and compliance.</p>
           </div>
           <div class="service-card">
-            <h3><a href="converter.html">Excel to XML Conversion</a></h3>
+            <h3><a href="converter.html">Bank Statement Utility</a></h3>
             <p>Streamline your processes with our Excel-to-XML conversion tool.</p>
           </div>
           <div class="service-card">
