--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,26 @@
       text-decoration: none;
       border-radius: 5px;
     }
+
+    .card {
+      background-color: #e6ffe6;
+      border-radius: 10px;
+      padding: 20px;
+      margin: 20px 0;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .service-card {
+      background-color: #e6ffe6;
+      border-radius: 10px;
+      padding: 20px;
+      margin: 15px 0;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    h2, h3 {
+      color: green;
+    }
   </style>
 </head>
 <body>
@@ -91,8 +111,8 @@
     <!-- About Us Section -->
     <section id="about" class="section section-about">
       <div class="container">
+        <h2>About Us</h2>
         <div class="card">
-          <h2>About Us</h2>
           <p>
             We are dedicated to delivering the highest standards of financial and accounting services.
             With years of experience and a team of expert professionals, we aim to simplify your financial journey
@@ -142,8 +162,8 @@
     <!-- Contact Us Section -->
     <section id="contact" class="section section-contact">
       <div class="container">
+        <h2>Contact Us</h2>
         <div class="card">
-          <h2>Contact Us</h2>
           <p>We’d love to hear from you! Get in touch for personalized financial solutions.</p>
           <div class="contact-info">
             <p><strong>Email:</strong> <a href="mailto:info@cafirm.com">info@mymail.com</a></p>
