made import button change

--- a/public/converter.html
+++ b/public/converter.html
@@ -184,7 +184,7 @@
       </ol>
 
       <div class="actions">
-          <a href="inputs/IMPORT TEMPLATE_Bank Statement.xlsx" download class="button">Download Sample File</a>
+          <a href="inputs/IMPORT TEMPLATE_Bank Statement.xlsx" download class="button">Import Template</a>
           
           <!-- File input and styled label -->
           <div class="file-input-container">
