--- a/public/converter.html
+++ b/public/converter.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bank Statement Utility</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-  <script defer src="converter.js"></script>
-  <style>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bank Statement Utility</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script defer src="converter.js"></script>
+    <!-- <style>
     html, body {
       height: 100%;
       margin: 0;
@@ -149,59 +158,194 @@
     h2, h3 {
       color: green;
     }
-  </style>
-</head>
-<body>
-  <header class="sticky-header">
-    <div class="container">
-      <h1 class="company-name">Sanjay Kuthe and Co</h1>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="index.html#about">About Us</a></li>
-          <li><a href="index.html#services">Services</a></li>
-          <li><a href="index.html#contact">Contact Us</a></li>
-          <li class="dropdown">
-            <a href="#tools" class="dropbtn">Tools</a>
-            <div class="dropdown-content">
-              <a href="converter.html">Bank Statement Utility</a>
-            </div>
+  </style> -->
+  </head>
+  <body>
+    <header class="sticky-header">
+      <div class="container header-container">
+        <h1 class="company-name">Sanjay Kuthe and Co</h1>
+        <nav>
+          <ul class="nav-links">
+            <li><a href="/index.html#about">About Us</a></li>
+            <li><a href="/index.html#services">Services</a></li>
+            <li><a href="/index.html#contact">Contact Us</a></li>
+            <li class="dropdown">
+              <a href="/converter.html" class="dropbtn">
+                <svg
+                  width="24px"
+                  height="24px"
+                  viewBox="0 0 15 15"
+                  fill="#CCA43B"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M5.944 0.5L5.858 0.936707L5.52901 2.53467C5.00301 2.73554 4.526 3.02037 4.095 3.35815L2.487 2.8205L2.05501 2.68658L1.83101 3.07233L0.723999 4.9231L0.5 5.3089L0.828003 5.5957L2.07201 6.65399C2.02701 6.93081 1.96901 7.20461 1.96901 7.49542C1.96901 7.78623 2.02701 8.0601 2.07201 8.33691L0.828003 9.3952L0.5 9.68201L0.723999 10.0677L1.83101 11.9186L2.05501 12.3053L2.487 12.1704L4.095 11.6328C4.526 11.9705 5.00301 12.2553 5.52901 12.4562L5.858 14.0541L5.944 14.4909H9.05501L9.142 14.0541L9.47 12.4562C9.996 12.2553 10.473 11.9705 10.904 11.6328L12.512 12.1704L12.944 12.3053L13.169 11.9186L14.275 10.0677L14.5 9.68201L14.171 9.3952L12.927 8.33691C12.973 8.0601 13.03 7.78623 13.03 7.49542C13.03 7.20461 12.973 6.93081 12.927 6.65399L14.171 5.5957L14.5 5.3089L14.275 4.9231L13.169 3.07233L12.944 2.68658L12.512 2.8205L10.904 3.35815C10.473 3.02037 9.996 2.73554 9.47 2.53467L9.142 0.936707L9.05501 0.5H5.944Z"
+                    stroke="black"
+                    stroke-linecap="square"
+                    stroke-linejoin="round"
+                  />
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M9.49963 7.49542C9.49963 8.5987 8.60363 9.49414 7.49963 9.49414C6.39563 9.49414 5.49963 8.5987 5.49963 7.49542C5.49963 6.39214 6.39563 5.49677 7.49963 5.49677C8.60363 5.49677 9.49963 6.39214 9.49963 7.49542Z"
+                    stroke="black"
+                    stroke-linecap="square"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main>
+      <div class="card">
+        <h2>Accounting Process Automation</h2>
+        <p>
+          Convert your bank statements into XML format effortlessly. Follow
+          these steps for a seamless experience:
+        </p>
+
+        <ol class="instructions">
+          <li>
+            Download the
+            <a href="inputs/IMPORT TEMPLATE_Bank Statement.xlsx" download
+              >Input Template</a
+            >.
           </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+          <li>Fill in the required details in the file.</li>
+          <li>
+            Upload the completed Excel file using the "Choose File" button
+            below.
+          </li>
+          <li>Click the "Process" button to generate the XML file.</li>
+        </ol>
 
-  <main>
-    <div class="card">
-      <h2>Excel to XML Converter</h2>
-      <p>Convert your bank statements into XML format effortlessly. Follow these steps for a seamless experience:</p>
+        <div class="actions">
+          <a
+            href="inputs/IMPORT TEMPLATE_Bank Statement.xlsx"
+            download
+            class="button"
+            ><?xml version="1.0" encoding="utf-8"?>
+            <!-- License: MIT. Made by Gitlab: https://gitlab.com/gitlab-org/gitlab-svgs?ref=iconduck.com -->
+            <svg
+              width="24px"
+              height="24px"
+              viewBox="0 0 16 16"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill="#ffffff"
+                fill-rule="evenodd"
+                d="M14,9 C14.5523,9 15,9.44772 15,10 L15,13 C15,14.1046 14.1046,15 13,15 L3,15 C1.89543,15 1,14.1046 1,13 L1,10 C1,9.44772 1.44772,9 2,9 C2.55228,9 3,9.44771 3,10 L3,13 L13,13 L13,10 C13,9.44771 13.4477,9 14,9 Z M8,1 C8.55228,1 9,1.44772 9,2 L9,6.58579 L10.2929,5.29289 C10.6834,4.90237 11.3166,4.90237 11.7071,5.29289 C12.0976,5.68342 12.0976,6.31658 11.7071,6.70711 L8,10.4142 L4.29289,6.70711 C3.90237,6.31658 3.90237,5.68342 4.29289,5.29289 C4.68342,4.90237 5.31658,4.90237 5.70711,5.29289 L7,6.58579 L7,2 C7,1.44772 7.44772,1 8,1 Z"
+              /></svg
+            ><span>Import Template</span></a
+          >
 
-      <ol class="instructions">
-        <li>Download the <a href="inputs/IMPORT TEMPLATE_Bank Statement.xlsx" download>sample Excel file</a>.</li>
-        <li>Fill in the required details in the file.</li>
-        <li>Upload the completed Excel file using the "Choose File" button below.</li>
-        <li>Click the "Process" button to generate the XML file.</li>
-      </ol>
-
-      <div class="actions">
-          <a href="inputs/IMPORT TEMPLATE_Bank Statement.xlsx" download class="button">Import Template</a>
-          
           <!-- File input and styled label -->
           <div class="file-input-container">
-            <label for="fileInput" class="file-input-label">Choose File</label>
-            <input type="file" id="fileInput" accept=".xlsx, .xls" class="file-input">
+            <label for="fileInput" class="file-input-label">
+              <svg
+                fill="#000000"
+                width="24px"
+                height="24px"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M20,8.94a1.31,1.31,0,0,0-.06-.27l0-.09a1.07,1.07,0,0,0-.19-.28h0l-6-6h0a1.07,1.07,0,0,0-.28-.19l-.09,0L13.06,2H7A3,3,0,0,0,4,5V19a3,3,0,0,0,3,3H17a3,3,0,0,0,3-3V9S20,9,20,8.94ZM14,5.41,16.59,8H14ZM18,19a1,1,0,0,1-1,1H7a1,1,0,0,1-1-1V5A1,1,0,0,1,7,4h5V9a1,1,0,0,0,1,1h5Z"
+                /></svg
+              ><span>Choose file</span></label
+            >
+            <input
+              hidden
+              type="file"
+              id="fileInput"
+              accept=".xlsx, .xls"
+              class="file-input"
+            />
             <span id="fileName">No file chosen</span>
           </div>
-          
-          <button id="processButton" class="button">Process</button>
-        </div>
-    </div>
-  </main>
 
-  <footer>
-    <div class="container">
-      <p>&copy; 2024 Sanjay Kuthe and Co. All Rights Reserved.</p>
-    </div>
-  </footer>
-</body>
+          <button id="processButton" class="button">
+            <svg
+              width="24px"
+              height="24px"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M22 15C22 18.87 18.87 22 15 22L16.05 20.25"
+                stroke="#ffffff"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M2 9C2 5.13 5.13 2 9 2L7.95 3.75"
+                stroke="#ffffff"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M13.7 4.44995L17.6799 6.74994L21.6199 4.45996"
+                stroke="#ffffff"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M17.6799 10.82V6.73999"
+                stroke="#ffffff"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M16.74 2.21L14.34 3.53996C13.8 3.83996 13.35 4.59995 13.35 5.21995V7.75999C13.35 8.37999 13.79 9.13998 14.34 9.43998L16.74 10.77C17.25 11.06 18.09 11.06 18.61 10.77L21.01 9.43998C21.55 9.13998 22 8.37999 22 7.75999V5.21995C22 4.59995 21.56 3.83996 21.01 3.53996L18.61 2.21C18.1 1.93 17.26 1.93 16.74 2.21Z"
+                stroke="#ffffff"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M2.34998 15.45L6.31998 17.7499L10.27 15.46"
+                stroke="#ffffff"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M6.31995 21.82V17.74"
+                stroke="#ffffff"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+              <path
+                d="M5.39 13.21L2.99001 14.54C2.45001 14.84 2 15.5999 2 16.2199V18.76C2 19.38 2.44001 20.14 2.99001 20.44L5.39 21.77C5.9 22.06 6.73999 22.06 7.25999 21.77L9.66 20.44C10.2 20.14 10.65 19.38 10.65 18.76V16.2199C10.65 15.5999 10.21 14.84 9.66 14.54L7.25999 13.21C6.73999 12.93 5.9 12.93 5.39 13.21Z"
+                stroke="#ffffff"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+            ><span>Process</span>
+          </button>
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="container">
+        <p>&copy; 2024 Sanjay Kuthe and Co. All Rights Reserved.</p>
+      </div>
+    </footer>
+  </body>
 </html>
