--- a/public/index.html
+++ b/public/index.html
@@ -4,86 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sanjay Kuthe and Co - Your Financial Partner</title>
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
-  <style>
-    .nav-links {
-      display: flex;
-      list-style: none;
-      margin: 0;
-      padding: 0;
-    }
-
-    .nav-links li {
-      margin-right: 20px;
-    }
-
-    .nav-links a {
-      text-decoration: none;
-      color: white;
-      padding: 10px 15px;
-      background-color: green;
-      border-radius: 5px;
-    }
-
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
-
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: green;
-      color: white;
-      padding: 10px;
-      border-radius: 5px;
-      box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-      z-index: 1;
-    }
-
-    .dropdown-content a {
-      display: block;
-      text-decoration: none;
-      color: white;
-      padding: 8px;
-    }
-
-    .dropdown-content a:hover {
-      background-color: #004d00;
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-
-    .dropdown .dropbtn {
-      background-color: green;
-      color: white;
-      padding: 10px 15px;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-
-    .card {
-      background-color: #e6ffe6;
-      border-radius: 10px;
-      padding: 20px;
-      margin: 20px 0;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    .service-card {
-      background-color: #e6ffe6;
-      border-radius: 10px;
-      padding: 20px;
-      margin: 15px 0;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-
-    h2, h3 {
-      color: green;
-    }
-  </style>
 </head>
 <body>
   <!-- Sticky Header -->
@@ -96,10 +21,12 @@
           <li><a href="#services">Services</a></li>
           <li><a href="#contact">Contact Us</a></li> 
           <li class="dropdown">
-            <a href="#tools" class="dropbtn">Tools</a>
-            <div class="dropdown-content">
-              <a href="http://192.168.0.108:3000/converter.html">Bank Statement Utility</a>
-            </div>
+            <a href="/converter.html" class="dropbtn">
+                <svg width="24px" height="24px" viewBox="0 0 15 15" fill="#CCA43B" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M5.944 0.5L5.858 0.936707L5.52901 2.53467C5.00301 2.73554 4.526 3.02037 4.095 3.35815L2.487 2.8205L2.05501 2.68658L1.83101 3.07233L0.723999 4.9231L0.5 5.3089L0.828003 5.5957L2.07201 6.65399C2.02701 6.93081 1.96901 7.20461 1.96901 7.49542C1.96901 7.78623 2.02701 8.0601 2.07201 8.33691L0.828003 9.3952L0.5 9.68201L0.723999 10.0677L1.83101 11.9186L2.05501 12.3053L2.487 12.1704L4.095 11.6328C4.526 11.9705 5.00301 12.2553 5.52901 12.4562L5.858 14.0541L5.944 14.4909H9.05501L9.142 14.0541L9.47 12.4562C9.996 12.2553 10.473 11.9705 10.904 11.6328L12.512 12.1704L12.944 12.3053L13.169 11.9186L14.275 10.0677L14.5 9.68201L14.171 9.3952L12.927 8.33691C12.973 8.0601 13.03 7.78623 13.03 7.49542C13.03 7.20461 12.973 6.93081 12.927 6.65399L14.171 5.5957L14.5 5.3089L14.275 4.9231L13.169 3.07233L12.944 2.68658L12.512 2.8205L10.904 3.35815C10.473 3.02037 9.996 2.73554 9.47 2.53467L9.142 0.936707L9.05501 0.5H5.944Z" stroke="black" stroke-linecap="square" stroke-linejoin="round"/>
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M9.49963 7.49542C9.49963 8.5987 8.60363 9.49414 7.49963 9.49414C6.39563 9.49414 5.49963 8.5987 5.49963 7.49542C5.49963 6.39214 6.39563 5.49677 7.49963 5.49677C8.60363 5.49677 9.49963 6.39214 9.49963 7.49542Z" stroke="black" stroke-linecap="square" stroke-linejoin="round"/>
+                    </svg>
+            </a>
           </li>
         </ul>
       </nav>
@@ -132,6 +59,10 @@
         <h2>Our Services</h2>
         <div class="services-grid">
           <div class="service-card">
+            <h3> Book Keeping & Data Finalisation</h3>
+            <p>Comprehensive bookkeeping and data finalization services to ensure your financial records are accurate, well-organized, and ready for compliance or decision-making.</p>
+          </div>
+          <div class="service-card">
             <h3>Income Tax Filing</h3>
             <p>Seamless tax filing and advisory services for individuals and businesses.</p>
           </div>
@@ -144,7 +75,7 @@
             <p>Comprehensive audits to ensure financial accuracy and compliance.</p>
           </div>
           <div class="service-card">
-            <h3><a href="converter.html">Bank Statement Utility</a></h3>
+            <h3><a href="converter.html">Accounting Process Automation</a></h3>
             <p>Streamline your processes with our Excel-to-XML conversion tool.</p>
           </div>
           <div class="service-card">
@@ -166,9 +97,9 @@
         <div class="card">
           <p>We’d love to hear from you! Get in touch for personalized financial solutions.</p>
           <div class="contact-info">
-            <p><strong>Email:</strong> <a href="mailto:info@cafirm.com">info@mymail.com</a></p>
-            <p><strong>Phone:</strong> <a href="tel:+919876543210">+91-98765-43210</a></p>
-            <p><strong>Address:</strong> Nagpur, India</p>
+            <p><strong>Email:</strong> <a>sanjaykuthe123@rediff.com</a></p>
+            <p><strong>Phone:</strong> <a>+919850393864</a></p>
+            <p><strong>Address:</strong> Shop No. 82, Rajat Sankul, Wing No. 4, Opposite Ganeshpeth Bus Stop, Nagpur - India</p>
           </div>
         </div>
       </div>
