--- a/public/converter.html
+++ b/public/converter.html
@@ -166,11 +166,11 @@
         <h1 class="company-name">Sanjay Kuthe and Co</h1>
         <nav>
           <ul class="nav-links">
-            <li><a href="/index.html#about">About Us</a></li>
-            <li><a href="/index.html#services">Services</a></li>
-            <li><a href="/index.html#contact">Contact Us</a></li>
+            <li><a href="./index.html#about">About Us</a></li>
+            <li><a href="./index.html#services">Services</a></li>
+            <li><a href="./index.html#contact">Contact Us</a></li>
             <li class="dropdown">
-              <a href="/converter.html" class="dropbtn">
+              <a href="./converter.html" class="dropbtn">
                 <svg
                   width="24px"
                   height="24px"
