--- a/public/converter.html
+++ b/public/converter.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <p id="welcomeMessage">You are successfully logged in!</p>
     <title>Bank Statement Utility</title>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,6 +18,46 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
+    <script>
+      // Initialize Firebase
+      const firebaseConfig = {
+          apiKey: "AIzaSyCheTKSioQvT0uemYqxCYr1hJxG8yDisCU",
+          authDomain: "general-login-b4932.firebaseapp.com",
+          projectId: "general-login-b4932",
+          storageBucket: "general-login-b4932.firebasestorage.app",
+          messagingSenderId: "503291448237",
+          appId: "1:503291448237:web:557d012d3a614860a46f24",
+          measurementId: "G-573SKVP492"
+      };
+  
+      // Initialize Firebase App
+      firebase.initializeApp(firebaseConfig);
+  
+      // Check if the user is logged in
+      firebase.auth().onAuthStateChanged((user) => {
+        if (!user) {
+          window.location.href = 'index.html'; // Redirect to login page
+        }  else {
+          // Display personalized welcome message
+          const welcomeMessage = document.getElementById('welcomeMessage');
+          const userName = user.displayName || user.email || "User"; // Use displayName if available, otherwise email
+          welcomeMessage.textContent = `Welcome, ${userName}!`;
+      }
+      });
+  
+      // Logout functionality
+      document.addEventListener('DOMContentLoaded', () => {
+        document.getElementById('logoutBtn').addEventListener('click', () => {
+          firebase.auth().signOut().then(() => {
+            alert('Logged out successfully!');
+            window.location.href = 'index.html';
+          }).catch((error) => {
+            console.error('Error logging out:', error);
+          });
+        });
+      });
+
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script defer src="converter.js"></script>
     <!-- <style>
@@ -197,6 +240,7 @@
                 </svg>
               </a>
             </li>
+            <li><button id="logoutBtn">Logout</button></li>
           </ul>
         </nav>
       </div>
