--- a/public/login.html
+++ b/public/login.html
@@ -7,48 +7,129 @@
   <!-- Correct Firebase SDK Scripts -->
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/styles.css">
   <style>
-    body { font-family: Arial, sans-serif; max-width: 400px; margin: auto; padding: 20px; }
+    .login-container { max-width: 400px; margin: auto; padding: 20px; }
     input, button { display: block; width: 100%; margin: 10px 0; padding: 10px; }
     button { background-color: green; color: white; border: none; cursor: pointer; }
     button:hover { background-color: darkgreen; }
   </style>
 </head>
 <body>
+  <!-- Sticky Header -->
+  <header class="sticky-header">
+    <div class="container header-container">
+      <h1 class="company-name">Sanjay Kuthe and Co</h1>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact Us</a></li> 
+          <li class="dropdown">
+            <a href="/login" class="dropbtn">
+                <svg width="24px" height="24px" viewBox="0 0 15 15" fill="#CCA43B" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M5.944 0.5L5.858 0.936707L5.52901 2.53467C5.00301 2.73554 4.526 3.02037 4.095 3.35815L2.487 2.8205L2.05501 2.68658L1.83101 3.07233L0.723999 4.9231L0.5 5.3089L0.828003 5.5957L2.07201 6.65399C2.02701 6.93081 1.96901 7.20461 1.96901 7.49542C1.96901 7.78623 2.02701 8.0601 2.07201 8.33691L0.828003 9.3952L0.5 9.68201L0.723999 10.0677L1.83101 11.9186L2.05501 12.3053L2.487 12.1704L4.095 11.6328C4.526 11.9705 5.00301 12.2553 5.52901 12.4562L5.858 14.0541L5.944 14.4909H9.05501L9.142 14.0541L9.47 12.4562C9.996 12.2553 10.473 11.9705 10.904 11.6328L12.512 12.1704L12.944 12.3053L13.169 11.9186L14.275 10.0677L14.5 9.68201L14.171 9.3952L12.927 8.33691C12.973 8.0601 13.03 7.78623 13.03 7.49542C13.03 7.20461 12.973 6.93081 12.927 6.65399L14.171 5.5957L14.5 5.3089L14.275 4.9231L13.169 3.07233L12.944 2.68658L12.512 2.8205L10.904 3.35815C10.473 3.02037 9.996 2.73554 9.47 2.53467L9.142 0.936707L9.05501 0.5H5.944Z" stroke="black" stroke-linecap="square" stroke-linejoin="round"/>
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M9.49963 7.49542C9.49963 8.5987 8.60363 9.49414 7.49963 9.49414C6.39563 9.49414 5.49963 8.5987 5.49963 7.49542C5.49963 6.39214 6.39563 5.49677 7.49963 5.49677C8.60363 5.49677 9.49963 6.39214 9.49963 7.49542Z" stroke="black" stroke-linecap="square" stroke-linejoin="round"/>
+                    </svg>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  <h3>Login</h3>
-  <input type="email" id="loginEmail" placeholder="Email" required />
-  <input type="password" id="loginPassword" placeholder="Password" required />
-  <button id="loginBtn">Login</button>
+  <!-- Main Content -->
+  <main>
+    <div class="login-container">
+      <h3>Login</h3>
+      <input type="email" id="loginEmail" placeholder="Email" required />
+      <input type="password" id="loginPassword" placeholder="Password" required />
+      <button id="loginBtn">Login</button>
+    </div>
+  </main>
 
-  <script>
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <p>&copy; 2024 Sanjay Kuthe and Co. All Rights Reserved.</p>
+    </div>
+  </footer>
+
+  <script type="module">
+    import config from './config.js';
+
     // Firebase Configuration
     const firebaseConfig = {
-        apiKey: "AIzaSyCheTKSioQvT0uemYqxCYr1hJxG8yDisCU",
-        authDomain: "general-login-b4932.firebaseapp.com",
-        projectId: "general-login-b4932",
-        storageBucket: "general-login-b4932.firebasestorage.app",
-        messagingSenderId: "503291448237",
-        appId: "1:503291448237:web:557d012d3a614860a46f24",
-        measurementId: "G-573SKVP492"
+      apiKey: "AIzaSyCheTKSioQvT0uemYqxCYr1hJxG8yDisCU",
+      authDomain: "general-login-b4932.firebaseapp.com",
+      projectId: "general-login-b4932",
+      storageBucket: "general-login-b4932.firebaseapp.com",
+      messagingSenderId: "503291448237",
+      appId: "1:503291448237:web:557d012d3a614860a46f24",
+      measurementId: "G-573SKVP492"
     };
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
 
+    // Set authentication state persistence to LOCAL
+    auth.setPersistence(firebase.auth.Auth.Persistence.LOCAL)
+      .then(() => {
+        // Login User
+        document.getElementById('loginBtn').addEventListener('click', () => {
+          const email = document.getElementById('loginEmail').value;
+          const password = document.getElementById('loginPassword').value;
 
-    // Login User
-    document.getElementById('loginBtn').addEventListener('click', () => {
-      const email = document.getElementById('loginEmail').value;
-      const password = document.getElementById('loginPassword').value;
+          // Call the backend API to check if the user's email exists and is not deleted
+          fetch(`${config.serverUrl}/api/users/checkRole`, {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({ email: email })
+          })
+          .then(response => response.json())
+          .then(data => {
+            if (data.role && !data.deleted) {
+              // Proceed with Firebase authentication
+              auth.signInWithEmailAndPassword(email, password)
+                .then(async (userCredential) => {
+                  const user = userCredential.user;
 
-      firebase.auth().signInWithEmailAndPassword(email, password)
-        .then(() => {
-          alert('Login Successful!');
-          window.location.href = 'converter.html';
-        })
-        .catch((error) => alert(error.message));
-    });
+                  // Store user details in localStorage
+                  localStorage.setItem('user', JSON.stringify({
+                    uid: user.uid,
+                    email: user.email,
+                    role: data.role
+                  }));
+                  if (data.role === 'ADMIN') {
+                    window.location.href = 'adminPanel.html';
+                  } else {
+                    window.location.href = 'converter.html';
+                  }
+                })
+                .catch((error) => alert(error.message));
+            } else if (data.deleted) {
+              alert('Invalid email. This user has been deleted.');
+            } else {
+              alert('User not found.');
+            }
+          })
+          .catch(error => {
+            console.error('Error checking user role:', error);
+            alert('Error checking user role.');
+          });
+        });
+      })
+      .catch((error) => {
+        console.error('Error setting persistence:', error);
+        alert('Error setting persistence.');
+      });
   </script>
 </body>
 </html>
